# yi

./: .ghci  .gitmodules  TODO.md  notes.md  stack.yaml  tst_file.hs  tst_file.tidal
example-configs/yi-all-static/: Main.hs
yi/: Main.hs  e.cabal  stack.yaml
yi-core/src/Yi/Command/: Help.hs
yi-keymap-vim/: yi-keymap-vim.cabal
yi-keymap-vim/src/Yi/Keymap/Vim/: Ex.hs
yi-keymap-vim/src/Yi/Keymap/Vim/Ex/Commands/: Rename.hs
yi-mode-haskell/: yi-mode-haskell.cabal
yi-mode-tidal/: yi-mode-tidal.cabal
yi-mode-tidal/src/Yi/Commands/: Tidal.hs
yi-mode-tidal/src/Yi/Mode/: Tidal.hs
yi-mode-tidal/src/Yi/Mode/Tidal/: EvalBuffer.hs  TidalCommands.hs
yi/modules/: ExCommandsHelp.hs  UserThemes.hs
yi/yi-mode-tidal/: yi-mode-tidal.cabal
yi/yi-mode-tidal/src/Yi/Config/Default/: TidalMode.hs
yi/yi-mode-tidal/src/Yi/Mode/: Tidal.hs
yi/yi-mode-tidal/src/Yi/Mode/Tidal/: Dollarify.hs
yi/yi-mode-tidal/src/Yi/Syntax/: Tidal.hs
yi/yi-mode-tidal/src/Yi/Syntax/Strokes/: Tidal.hs
