name:           yi-mode-tidal
version:        0.19.0
synopsis:       Yi editor tidal mode
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    src/Yi/Lexer/common.hsinc

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  include-dirs:
      src/Yi/Lexer
  build-depends:
      base >= 4.8 && < 5
    , array
    , binary >= 0.7
    , data-default
    , filepath
    , microlens-platform
    , text
    , yi-core >= 0.19
    , yi-language >= 0.19
    , yi-rope >= 0.10
    , yi-keymap-vim >= 0.19
    , attoparsec >= 0.13.2.5
    , mtl
    -- , idris
    , trifecta
    -- , yi >= 0.19.0
-- fuck hidden packages
    , transformers-base
    , bytestring
    , process >= 1.2.3
  build-tools:
      alex >= 3.0.3 && < 3.2.0 || >= 3.2.1
  exposed-modules:
      Yi.Config.Default.TidalMode
      Yi.Commands.Tidal
      Yi.Lexer.Haskell
      Yi.Lexer.LiterateHaskell
      Yi.Mode.GHCi
      Yi.Mode.Tidal
      Yi.Mode.Tidal.Dollarify
      Yi.Syntax.Tidal
      Yi.Syntax.Paren
      Yi.Syntax.Strokes.Tidal
      Yi.Mode.Tidal.EvalBuffer
  other-modules:
      Paths_yi_mode_tidal
  default-language: Haskell2010
